api/swim_form/src/tests/derive/form/newtype_empty_struct.rs
use swim_form_derive::*;

fn main() {
    #[derive(Form)]
    #[form(newtype)]
    struct A{}
}
